add Home layout login

--- a/Swimchampion/src/app/footer/footer.component.html
+++ b/Swimchampion/src/app/footer/footer.component.html
@@ -15,7 +15,7 @@
     </mat-toolbar-row>
     <mat-toolbar-row>
         <span class="material-icons">place</span>
-        <h1>住址:台北市文山區福興路100-2號9樓</h1>
+        <h1>台北市文山區福興路100-2號9樓</h1>
         <span class="material-icons">phone</span>
         <h1>電話:0970338645</h1>
     </mat-toolbar-row>
