--- a/Swimchampion/src/app/swim-introduction/swim-introduction.component.html
+++ b/Swimchampion/src/app/swim-introduction/swim-introduction.component.html
@@ -1,1 +1,29 @@
-<p>swim-introduction works!</p>
+<mat-grid-list cols="4" rowHeight="5vh">
+
+    <mat-grid-tile colspan="2" rowspan="20">
+
+        <h1>簡介</h1>
+
+    </mat-grid-tile>
+
+    <mat-grid-tile colspan="1" rowspan="10" id="Crawl-Stroke " value="">
+        <h1>捷式</h1>
+    </mat-grid-tile>
+    <mat-grid-tile colspan="1" rowspan="10" id="Frog" value="">
+
+        <h1>蛙式</h1>
+
+    </mat-grid-tile>
+    <mat-grid-tile colspan="1" rowspan="10" id="Butterfly" value="">
+
+        <h1>蝶式</h1>
+
+    </mat-grid-tile>
+    <mat-grid-tile colspan="1" rowspan="10" id="Supine" value="">
+
+        <h1>仰式</h1>
+
+    </mat-grid-tile>
+
+
+</mat-grid-list>
