--- a/Swimchampion/src/app/cart/cart.component.html
+++ b/Swimchampion/src/app/cart/cart.component.html
@@ -1,1 +1,16 @@
-<p>cart works!</p>
+<mat-grid-list cols="1" rowHeight="100vh">
+    <mat-grid-tile colspan="1">
+
+        <img src="assets/img/p404.png" alt="">
+        <div id="Height404">
+            <h1>404</h1>
+            <h4> Opps! Page not found</h4>
+            <p>The page you were looking for doesn't exist. You may have mistyped the address or the page may have moved</p>
+            <a mat-raised-button color="accent" routerLink="/Home">back To Home</a>
+
+        </div>
+    </mat-grid-tile>
+</mat-grid-list>
+
+
+<router-outlet></router-outlet>
