login page swim product introduction

--- a/src/app/porduct-list/porduct-list.component.html
+++ b/src/app/porduct-list/porduct-list.component.html
@@ -1,1 +1,35 @@
-<p>porduct-list works!</p>
+<div class="container">
+    <div class="box">
+        <div class="content">
+            <h2>眼睛</h2>
+            <h3>蛙鏡</h3>
+            <p>泳鏡是游泳用品，是用以保護眼睛和令佩戴者清楚看見水中的東西。因為游泳水域的水質一般都是清水或海水，對於眼睛都具有滲透壓差，會讓眼睛極為不適，再者眼睛暴露於水中的容易受到細菌感染眼疾，所以游泳幾乎都會使用泳鏡。為了讓近視的人得以使用也有製作近視度數的款式。</p>
+            <a href="#">前往了解</a>
+        </div>
+    </div>
+    <div class="box">
+        <div class="content">
+            <h2>頭部</h2>
+            <h3>泳帽</h3>
+            <p>保护头发：泳池的水因消毒含氯，氯会对头发造成一定的损伤。防止传播和感染病菌：頭皮上有很多真菌，不能完全被消毒水殺死，进入泳池后如不带泳帽病菌容易传入水中，而后感染他人。便于救生：鮮艷的泳帽比較容易吸引目光。 減少頭髮脫落：防止堵塞泳池的水循环系统
+            </p>
+            <a href="#">前往了解</a>
+        </div>
+    </div>
+    <div class="box">
+        <div class="content">
+            <h2>身體</h2>
+            <h3>泳衣</h3>
+            <p>在古代原本並沒有特定的泳衣，許多人游泳時直接裸身入水，而之後到了维多利亚时代，許多人多的海灘蓋起一種設施，以防人與人之間，尤其是異性之間的裸裎相見。</p>
+            <a href="#">前往了解</a>
+        </div>
+    </div>
+    <div class="box">
+        <div class="content">
+            <h2>器材</h2>
+            <h3>浮板</h3>
+            <p>浮板是一種初學者或游泳技術較差的人用來輔助自身游泳所用的道具。用法是把雙手放在浮板上，腳在後面打水前進。它主要成片狀，裡面塞著浮力強的海綿，但隨著文明的進步，漸漸研發出各式各樣的浮板，如夾腳浮板，使人游泳更順利。</p>
+            <a href="#">前往了解</a>
+        </div>
+    </div>
+</div>
