--- a/src/app/swim-introduction/swim-introduction.component.html
+++ b/src/app/swim-introduction/swim-introduction.component.html
@@ -4,6 +4,17 @@
 
         <h1>簡介</h1>
 
+        <!-- css動畫範例 -->
+
+        <!-- <div class="view_port">
+            <div class="polling_message">
+                Listening for dispatches
+            </div>
+            <div class="cylon_eye"></div>
+        </div> -->
+
+        <!-- css動畫範例 -->
+
     </mat-grid-tile>
 
     <mat-grid-tile colspan="1" rowspan="10" id="Crawl-Stroke" value="">
