--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,13 +1,20 @@
 mat-grid-list {
-    background: linear-gradient(45deg, #8500ff, #5acaff, #fff, #5acaff, #8500ff);
+    /* background: linear-gradient(45deg, #8500ff, #5acaff, #fff, #5acaff, #8500ff); */
 }
 
 mat-grid-tile {
-    border: 1px solid black;
+    position: relative;
+    background-image: url('../../assets/img//pool3.jpg');
+    width: 100%;
+    height: 100vh;
+    transition: all 1s ease;
 }
 
-h1 {
+mat-grid-tile h1 {
+    position: absolute;
+    top: 10rem;
+    left: 10rem;
+    font-size: 8rem;
     color: #fff;
-    background: blue;
-    border: 1px solid black;
+    opacity: 0.8;
 }
