--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,107 +1,7 @@
 <mat-grid-list cols="4" rowHeight="5vh">
-    <mat-grid-tile colspan="4" rowspan="12">
-
-        <h1>1</h1>
-
-    </mat-grid-tile>
-    <mat-grid-tile colspan="1" rowspan="8">
-
-        <h1>2</h1>
-
-    </mat-grid-tile>
-    <mat-grid-tile colspan="1" rowspan="8">
-
-        <h1>3</h1>
-
-    </mat-grid-tile>
-    <mat-grid-tile colspan="1" rowspan="8">
-
-        <h1>4</h1>
-
-    </mat-grid-tile>
-    <mat-grid-tile colspan="1" rowspan="8">
-
-        <h1>5</h1>
-
-    </mat-grid-tile>
-    <mat-grid-tile colspan="2" rowspan="20">
-
-        <h1>6</h1>
-
-    </mat-grid-tile>
-
-    <mat-grid-tile colspan="1" rowspan="10">
-
-        <h1>7</h1>
-
-    </mat-grid-tile>
-    <mat-grid-tile colspan="1" rowspan="10">
-
-        <h1>8</h1>
-
-    </mat-grid-tile>
-    <mat-grid-tile colspan="1" rowspan="10">
-
-        <h1>9</h1>
-
-    </mat-grid-tile>
-    <mat-grid-tile colspan="1" rowspan="10">
-
-        <h1>10</h1>
-
-    </mat-grid-tile>
-    <mat-grid-tile colspan="1" rowspan="20">
-
-        <h1>11</h1>
-
-    </mat-grid-tile>
-    <mat-grid-tile rowspan="5">
-
-        <h1>12</h1>
-
-    </mat-grid-tile>
-    <mat-grid-tile colspan="1" rowspan="20">
-
-        <h1>13</h1>
-
-    </mat-grid-tile>
-
-
-    <mat-grid-tile colspan="1" rowspan="5">
-
-        <h1>14</h1>
-
-    </mat-grid-tile>
-
-    <mat-grid-tile colspan="1" rowspan="5">
-
-        <h1>15</h1>
-
-    </mat-grid-tile>
-    <mat-grid-tile rowspan="5">
-
-        <h1>16</h1>
-
-    </mat-grid-tile>
-    <mat-grid-tile rowspan="10">
-
-        <h1>17</h1>
-
-    </mat-grid-tile>
-    <mat-grid-tile rowspan="10">
-
-        <h1>18</h1>
-
-    </mat-grid-tile>
     <mat-grid-tile colspan="4" rowspan="20">
 
-        <h1>19</h1>
+        <h1>hello everyone</h1>
 
     </mat-grid-tile>
-    <mat-grid-tile colspan="4" rowspan="20">
-
-        <h1>20</h1>
-
-    </mat-grid-tile>
-
 </mat-grid-list>
