--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -4,7 +4,7 @@ mat-grid-list {
 
 mat-grid-tile {
     position: relative;
-    background-image: url('../../assets/img//pool3.jpg');
+    background-image: url("../../assets/img//pool3.jpg");
     width: 100%;
     height: 100vh;
     transition: all 1s ease;
